update post: I Want To Build Better Motherf**king Websites

--- a/cl7p2bc0q02872bnv70ts65x4.md
+++ b/cl7p2bc0q02872bnv70ts65x4.md
@@ -38,7 +38,7 @@ The web has come a long way from sharing documents with fellow academics to crea
 
 We can make it better. More accessible, more secure and empowering for all.
 
-See [Mozilla’s vision for the evolution of the Web] )https://webvision.mozilla.org/full/) for more.
+See [Mozilla’s vision for the evolution of the Web](https://webvision.mozilla.org/full/) for more.
 
 Let's make it better.
 
