update post: I Want To Build Better Motherf**king Websites

--- a/cl7p2bc0q02872bnv70ts65x4.md
+++ b/cl7p2bc0q02872bnv70ts65x4.md
@@ -1,4 +1,4 @@
-## I Want To Build Better Motherf**king Websites
+# I Want To Build Better Motherf**king Websites
 
 **Language Warning: Explicit Content**
 
@@ -30,7 +30,7 @@ I want to make your life on the web easier.
 
 It helps everyone. 
 
-After all,
+After all
 
 ## The Web Is For Everyone.
 
