update post: Launch Flatpak Apps With Custom Args and Environment Variables

--- a/cl99u2r1l000209mo6hql4i88.md
+++ b/cl99u2r1l000209mo6hql4i88.md
@@ -10,6 +10,8 @@ First, you need to find the application id of the app you want. To do that run t
 $ flatpak list
 ```
 
+![screenshot of flatpak install command output](https://cdn.hashnode.com/res/hashnode/image/upload/v1665831274604/PdFl9Xgjk.png align="left")
+
 Find the `Application ID` and save it somewhere, it's going to be important later on.
 
 
@@ -47,12 +49,9 @@ If you **only** want to add some custom env variables there is an easy method. W
 $ flatpak override --user < --env=VARIABLE_NAME=VARIABLE_VALUE > <Application ID>
 ```
 
-**Remove the `--user` flag if your application is installed system-wide.** You can check your installation type by running the `flatpak list` command. See the **Installation** field on the right-most section.
-
-
-![screenshot of flatpak install command output](https://cdn.hashnode.com/res/hashnode/image/upload/v1665831274604/PdFl9Xgjk.png align="left")
-
 This will make your env variable permanent.
+
+*Note: you can remove the `--user` flag if you want the override to be applied system-wide. I only wanted it applied for my user so I'm using the flag here.*
 
 
 To make custom arguments permanent we just have to get a little more involved.
